# mizu

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
mizu-core/: Cargo.toml
mizu-core/src/: cartridge.rs  cpu.rs  lib.rs  memory.rs  printer.rs  save_error.rs
mizu-core/src/cpu/: instruction.rs
mizu-core/src/tests/: mod.rs
save_state/: Cargo.toml
save_state_derive/: Cargo.toml
src/: main.rs  notification.rs  printer_front.rs
